package main

import (
	"bufio"
	"flag"
	"fmt"
	"log"
	"net"
	"os"
	"os/signal"
	"strconv"
	"strings"
	"syscall"
	"time"

	"google.golang.org/grpc"
	"gopkg.in/yaml.v3"

	pb "github.com/trusted-space/kernel/proto/kernel/v1"
	"github.com/trusted-space/kernel/kernel/circulation"
	"github.com/trusted-space/kernel/kernel/control"
	"github.com/trusted-space/kernel/kernel/database"
	"github.com/trusted-space/kernel/kernel/evidence"
	"github.com/trusted-space/kernel/kernel/security"
	"github.com/trusted-space/kernel/kernel/server"
)

// SeedKernelConfig ç§å­å†…æ ¸é…ç½®
type SeedKernelConfig struct {
	KernelID string `yaml:"kernel_id"`
	Address  string `yaml:"address"`
	Port     int    `yaml:"port"`
}

// Config å†…æ ¸é…ç½®
type Config struct {
	Kernel struct {
		ID          string `yaml:"id"`
		Type        string `yaml:"type"`
		Description string `yaml:"description"`
	} `yaml:"kernel"`

	Server struct {
		Address string `yaml:"address"`
		Port    int    `yaml:"port"`
	} `yaml:"server"`

	MultiKernel struct {
		SeedKernels       []SeedKernelConfig `yaml:"seed_kernels"`
		KernelPort        int  `yaml:"kernel_port"`
		HeartbeatInterval int  `yaml:"heartbeat_interval"`
		ConnectTimeout    int  `yaml:"connect_timeout"`
		MaxRetries        int  `yaml:"max_retries"`
	} `yaml:"multi_kernel"`

	Security struct {
		CACertPath     string `yaml:"ca_cert_path"`
		CAKeyPath      string `yaml:"ca_key_path"`      // CAç§é’¥è·¯å¾„
		ServerCertPath string `yaml:"server_cert_path"`
		ServerKeyPath  string `yaml:"server_key_path"`
		// å†…æ ¸é—´é€šä¿¡è¯ä¹¦
		KernelCertPath string `yaml:"kernel_cert_path"`
		KernelKeyPath  string `yaml:"kernel_key_path"`
	} `yaml:"security"`

	Evidence struct {
		Persistent  bool   `yaml:"persistent"`
		LogFilePath string `yaml:"log_file_path"`
	} `yaml:"evidence"`

	Database struct {
		Enabled  bool   `yaml:"enabled"`
		Host     string `yaml:"host"`
		Port     int    `yaml:"port"`
		User     string `yaml:"user"`
		Password string `yaml:"password"`
		Database string `yaml:"database"`
	} `yaml:"database"`

	Policy struct {
		DefaultAllow bool `yaml:"default_allow"`
	} `yaml:"policy"`

	Channel struct {
		Evidence struct {
			DefaultMode          string `yaml:"default_mode"`
			DefaultStrategy      string `yaml:"default_strategy"`
			DefaultConnectorID   string `yaml:"default_connector_id"`
			DefaultBackupEnabled bool   `yaml:"default_backup_enabled"`
			DefaultRetentionDays int    `yaml:"default_retention_days"`
			DefaultCompressData  bool   `yaml:"default_compress_data"`
		} `yaml:"evidence"`
	} `yaml:"channel"`
}

func main() {
	// è§£æå‘½ä»¤è¡Œå‚æ•°
	configPath := flag.String("config", "config/kernel.yaml", "path to config file")
	daemon := flag.Bool("daemon", false, "run in daemon/background mode without interactive shell")

	// é»˜è®¤å­˜è¯é…ç½®ç›¸å…³å‚æ•°ï¼ˆå¸¦é»˜è®¤å€¼ï¼Œä¼šè¢«é…ç½®æ–‡ä»¶è¦†ç›–ï¼‰
	defaultEvidenceMode := flag.String("default-evidence-mode", "none", "default evidence mode (none, internal, external, hybrid)")
	defaultEvidenceStrategy := flag.String("default-evidence-strategy", "all", "default evidence strategy (all, data, control, important)")
	defaultEvidenceConnector := flag.String("default-evidence-connector", "", "default external evidence connector ID")
	defaultEvidenceBackup := flag.Bool("default-evidence-backup", false, "enable backup evidence by default")
	defaultEvidenceRetention := flag.Int("default-evidence-retention", 30, "default evidence retention days")
	defaultEvidenceCompress := flag.Bool("default-evidence-compress", true, "compress evidence data by default")

	flag.Parse()

	// åŠ è½½é…ç½®
	config, err := loadConfig(*configPath)
	if err != nil {
		log.Fatalf("Failed to load config: %v", err)
	}

	// è®¾ç½®é»˜è®¤å€¼
	if config.Kernel.ID == "" {
		config.Kernel.ID = "kernel-1"
	}
	if config.Kernel.Type == "" {
		config.Kernel.Type = "primary"
	}
	if config.MultiKernel.KernelPort == 0 {
		config.MultiKernel.KernelPort = config.Server.Port + 2
	}
	if config.MultiKernel.HeartbeatInterval == 0 {
		config.MultiKernel.HeartbeatInterval = 30
	}
	if config.MultiKernel.ConnectTimeout == 0 {
		config.MultiKernel.ConnectTimeout = 10
	}
	if config.MultiKernel.MaxRetries == 0 {
		config.MultiKernel.MaxRetries = 3
	}
	if config.Security.KernelCertPath == "" {
		config.Security.KernelCertPath = config.Security.ServerCertPath
	}
	if config.Security.KernelKeyPath == "" {
		config.Security.KernelKeyPath = config.Security.ServerKeyPath
	}

	// ä½¿ç”¨é…ç½®æ–‡ä»¶ä¸­çš„å€¼è¦†ç›–å‘½ä»¤è¡Œå‚æ•°ï¼ˆå¦‚æœé…ç½®æ–‡ä»¶ä¸­æœ‰è®¾ç½®ï¼‰
	if config.Channel.Evidence.DefaultMode != "" {
		*defaultEvidenceMode = config.Channel.Evidence.DefaultMode
	}
	if config.Channel.Evidence.DefaultStrategy != "" {
		*defaultEvidenceStrategy = config.Channel.Evidence.DefaultStrategy
	}
	if config.Channel.Evidence.DefaultConnectorID != "" {
		*defaultEvidenceConnector = config.Channel.Evidence.DefaultConnectorID
	}
	if config.Channel.Evidence.DefaultRetentionDays > 0 {
		*defaultEvidenceRetention = config.Channel.Evidence.DefaultRetentionDays
	}
	*defaultEvidenceBackup = config.Channel.Evidence.DefaultBackupEnabled
	*defaultEvidenceCompress = config.Channel.Evidence.DefaultCompressData

	// åˆå§‹åŒ–ç»„ä»¶
	log.Println("Initializing kernel components...")

	// 1. èº«ä»½æ³¨å†Œè¡¨
	registry := control.NewRegistry()
	registry.StartHealthCheck()
	log.Println("âœ“ Registry initialized")

	// 2. æƒé™ç­–ç•¥å¼•æ“
	policyEngine := control.NewPolicyEngine(config.Policy.DefaultAllow)
	policyEngine.LoadDefaultRules()
	log.Println("âœ“ Policy engine initialized")

	// 3. é¢‘é“ç®¡ç†å™¨
	channelManager := circulation.NewChannelManager()
	channelManager.StartCleanupRoutine()
	channelManager.StartBufferCleanupRoutine() // å¯åŠ¨è¿æ¥å™¨ç¼“å†²æ¸…ç†åç¨‹

	// åˆå§‹åŒ–é¢‘é“é…ç½®ç®¡ç†å™¨
	configManager, err := circulation.NewChannelConfigManager("./channel_configs")
	if err != nil {
		log.Fatalf("Failed to create channel config manager: %v", err)
	}
	channelManager.SetConfigManager(configManager)

	// è®¾ç½®é»˜è®¤å­˜è¯é…ç½®ï¼ˆå½“é¢‘é“æœªæŒ‡å®šé…ç½®æ–‡ä»¶æ—¶ä½¿ç”¨ï¼‰
	defaultEvidenceConfig := &circulation.EvidenceConfig{
		Mode:           circulation.EvidenceMode(*defaultEvidenceMode),
		Strategy:       circulation.EvidenceStrategy(*defaultEvidenceStrategy),
		ConnectorID:    *defaultEvidenceConnector,
		BackupEnabled:  *defaultEvidenceBackup,
		RetentionDays:  *defaultEvidenceRetention,
		CompressData:   *defaultEvidenceCompress,
		CustomSettings: make(map[string]string),
	}

	if err := channelManager.SetDefaultEvidenceConfig(defaultEvidenceConfig); err != nil {
		log.Fatalf("Failed to set default evidence config: %v", err)
	}

	// å¯åŠ¨å­˜è¯è¿æ¥å™¨å¿ƒè·³æ£€æŸ¥
	channelManager.StartEvidenceConnectorHeartbeatCheck()

	log.Println("âœ“ Channel manager initialized")

	// 4. æ•°æ®åº“ç®¡ç†å™¨ï¼ˆå¦‚æœå¯ç”¨ï¼‰
	var dbManager *database.DBManager
	var evidenceStore evidence.EvidenceStore

	if config.Database.Enabled {
		dbConfig := database.MySQLConfig{
			Host:     config.Database.Host,
			Port:     config.Database.Port,
			User:     config.Database.User,
			Password: config.Database.Password,
			Database: config.Database.Database,
		}

		dbManager, err = database.NewDBManager(dbConfig)
		if err != nil {
			log.Fatalf("Failed to initialize database: %v", err)
		}
		defer dbManager.Close()

		// åˆ›å»ºè¯æ®å­˜å‚¨
		evidenceStore = database.NewMySQLEvidenceStore(dbManager.GetDB())
		log.Println("âœ“ Database initialized")
	}

	// 5. å®¡è®¡æ—¥å¿—
	auditLogConfig := evidence.AuditLogConfig{
		Persistent:     config.Evidence.Persistent,
		LogFilePath:    config.Evidence.LogFilePath,
		Store:          evidenceStore,
		ChannelManager: channelManager,
		UseMemoryCache: !config.Database.Enabled, // å¦‚æœä½¿ç”¨æ•°æ®åº“ï¼Œä¸éœ€è¦å†…å­˜ç¼“å­˜
	}

	auditLog, err := evidence.NewAuditLogWithConfig(auditLogConfig)
	if err != nil {
		log.Fatalf("Failed to initialize audit log: %v", err)
	}
	defer auditLog.Close()
	log.Println("âœ“ Audit log initialized")

	// 6. CA æœåŠ¡ï¼ˆç”¨äºåŠ¨æ€ç­¾å‘è¯ä¹¦ï¼‰
	ca, err := security.NewCA(config.Security.CACertPath, config.Security.CAKeyPath)
	if err != nil {
		log.Fatalf("Failed to initialize CA: %v", err)
	}
	log.Println("âœ“ CA initialized")

	// 7. å¤šå†…æ ¸ç®¡ç†å™¨ï¼ˆæ ¸å¿ƒç»„ä»¶ï¼Œæ€»æ˜¯å¯ç”¨ï¼‰
	log.Println("æ­£åœ¨åˆå§‹åŒ–å¤šå†…æ ¸ç®¡ç†å™¨...")

	kernelConfig := &server.KernelConfig{
		KernelID:          config.Kernel.ID,
		KernelType:        config.Kernel.Type,
		Description:       config.Kernel.Description,
		Address:           config.Server.Address,
		Port:              config.Server.Port,
		KernelPort:        config.MultiKernel.KernelPort,
		CACertPath:        config.Security.CACertPath,
		KernelCertPath:    config.Security.KernelCertPath,
		KernelKeyPath:     config.Security.KernelKeyPath,
		HeartbeatInterval: config.MultiKernel.HeartbeatInterval,
		ConnectTimeout:    config.MultiKernel.ConnectTimeout,
		MaxRetries:        config.MultiKernel.MaxRetries,
	}

	multiKernelManager, err := server.NewMultiKernelManager(kernelConfig, registry, channelManager)
	if err != nil {
		log.Fatalf("Failed to initialize multi-kernel manager: %v", err)
	}

	// è¿æ¥ç§å­å†…æ ¸
	for _, seed := range config.MultiKernel.SeedKernels {
		go func(seedConfig SeedKernelConfig) {
			if err := multiKernelManager.ConnectToKernel(seedConfig.KernelID, seedConfig.Address, seedConfig.Port); err != nil {
				log.Printf("Failed to connect to seed kernel %s: %v", seedConfig.KernelID, err)
			}
		}(seed)
	}

	// å¯åŠ¨å†…æ ¸é—´é€šä¿¡æœåŠ¡å™¨
	go func() {
		if err := multiKernelManager.StartKernelServer(); err != nil {
			log.Printf("Failed to start kernel server: %v", err)
		}
	}()

	log.Println("âœ“ Multi-kernel manager initialized")

	// 8. mTLS é…ç½®
	mtlsConfig := &security.MTLSConfig{
		CACertPath:     config.Security.CACertPath,
		ServerCertPath: config.Security.ServerCertPath,
		ServerKeyPath:  config.Security.ServerKeyPath,
	}

	creds, err := security.NewServerTransportCredentials(mtlsConfig)
	if err != nil {
		log.Fatalf("Failed to setup mTLS: %v", err)
	}
	log.Println("âœ“ mTLS configured")

	// åˆ›å»º gRPC æœåŠ¡å™¨
	grpcServer := grpc.NewServer(
		grpc.Creds(creds),
		grpc.MaxRecvMsgSize(10*1024*1024), // 10MB
		grpc.MaxSendMsgSize(10*1024*1024),
	)

	// æ³¨å†ŒæœåŠ¡
	channelService := server.NewChannelServiceServer(channelManager, policyEngine, registry, auditLog, multiKernelManager)
	pb.RegisterChannelServiceServer(grpcServer, channelService)

	identityService := server.NewIdentityServiceServer(registry, auditLog, ca, channelManager, channelService.NotificationManager, multiKernelManager)
	pb.RegisterIdentityServiceServer(grpcServer, identityService)

	evidenceService := server.NewEvidenceServiceServer(auditLog, channelManager)
	pb.RegisterEvidenceServiceServer(grpcServer, evidenceService)

	// æ³¨å†Œå†…æ ¸é—´é€šä¿¡æœåŠ¡ï¼ˆå¤šå†…æ ¸ç½‘ç»œæ ¸å¿ƒæœåŠ¡ï¼‰
	kernelService := server.NewKernelServiceServer(multiKernelManager, channelManager, registry)
	pb.RegisterKernelServiceServer(grpcServer, kernelService)
	log.Println("âœ“ Kernel-to-kernel service registered")

	log.Println("âœ“ gRPC services registered")

	// åˆ›å»ºå¼•å¯¼æœåŠ¡ï¼ˆå…è®¸æ— è¯ä¹¦è¿æ¥ï¼Œç”¨äºé¦–æ¬¡æ³¨å†Œï¼‰
	bootstrapCreds, err := security.NewBootstrapServerTransportCredentials(mtlsConfig)
	if err != nil {
		log.Fatalf("Failed to setup bootstrap TLS: %v", err)
	}
	
	bootstrapServer := grpc.NewServer(
		grpc.Creds(bootstrapCreds),
		grpc.MaxRecvMsgSize(10*1024*1024),
		grpc.MaxSendMsgSize(10*1024*1024),
	)
	
	// æ³¨å†Œå¼•å¯¼æœåŠ¡ï¼ˆåªåŒ…å«RegisterConnectoræ–¹æ³•ï¼‰
	pb.RegisterIdentityServiceServer(bootstrapServer, identityService)
	
	// å¯åŠ¨å¼•å¯¼æœåŠ¡å™¨ï¼ˆä½¿ç”¨ä¸åŒçš„ç«¯å£ï¼Œä¾‹å¦‚ä¸»ç«¯å£+1ï¼‰
	bootstrapPort := config.Server.Port + 1
	bootstrapAddress := fmt.Sprintf("%s:%d", config.Server.Address, bootstrapPort)
	bootstrapListener, err := net.Listen("tcp", bootstrapAddress)
	if err != nil {
		log.Fatalf("Failed to listen on bootstrap port: %v", err)
	}
	
	go func() {
		log.Printf("ğŸ”“ Bootstrap server started on %s (for certificate registration)", bootstrapAddress)
		if err := bootstrapServer.Serve(bootstrapListener); err != nil {
			log.Printf("Bootstrap server error: %v", err)
		}
	}()

	// å¯åŠ¨ä¸»æœåŠ¡å™¨ï¼ˆmTLSï¼‰
	address := fmt.Sprintf("%s:%d", config.Server.Address, config.Server.Port)
	listener, err := net.Listen("tcp", address)
	if err != nil {
		log.Fatalf("Failed to listen: %v", err)
	}

	// ä¼˜é›…å…³é—­
	go func() {
		sigChan := make(chan os.Signal, 1)
		signal.Notify(sigChan, syscall.SIGINT, syscall.SIGTERM)
		<-sigChan

		log.Println("\nShutting down gracefully...")
		bootstrapServer.GracefulStop()
		grpcServer.GracefulStop()
		auditLog.Close()
		log.Println("Shutdown complete")
		os.Exit(0)
	}()

	log.Printf("ğŸš€ Trusted Data Space Kernel started on %s", address)

	// é»˜è®¤è¿›å…¥äº¤äº’æ¨¡å¼ï¼Œé™¤éæŒ‡å®š-daemonå‚æ•°
	if *daemon {
		log.Println("Running in daemon mode (background service only)...")
		log.Println("Waiting for connector connections...")
	} else {
		log.Println("Starting interactive management console...")
		log.Println("âœ“ gRPC server is running in the background")
		log.Println("âœ“ Interactive commands are enabled")
		log.Println("âœ“ Ready to accept connector connections")
		go runInteractiveKernelShell(config, channelManager, registry, multiKernelManager)
	}

	if err := grpcServer.Serve(listener); err != nil {
		log.Fatalf("Failed to serve: %v", err)
	}
}

// runInteractiveKernelShell è¿è¡Œäº¤äº’å¼å†…æ ¸å‘½ä»¤è¡Œ
func runInteractiveKernelShell(config *Config, channelManager *circulation.ChannelManager,
	registry *control.Registry, multiKernelManager *server.MultiKernelManager) {

	kernelID := config.Kernel.ID
	scanner := bufio.NewScanner(os.Stdin)

	fmt.Println("\n" + strings.Repeat("=", 60))
	fmt.Println("ğŸš€ Trusted Data Space Kernel - Interactive Management Console")
	fmt.Println(strings.Repeat("=", 60))
	fmt.Printf("Kernel ID: %s\n", kernelID)
	fmt.Println("Multi-kernel: enabled (default)")
	fmt.Println("gRPC Server: Running (accepting connector connections)")
	fmt.Println("Management: Interactive commands enabled")
	fmt.Println(strings.Repeat("=", 60))
	fmt.Println("Type 'help' for available commands or 'status' for kernel status")
	fmt.Println()

	for {
		fmt.Printf("[%s] > ", kernelID)

		if !scanner.Scan() {
			break
		}

		line := strings.TrimSpace(scanner.Text())
		if line == "" {
			continue
		}

		parts := strings.Fields(line)
		if len(parts) == 0 {
			continue
		}

		command := parts[0]
		args := parts[1:]

		switch command {
		case "help", "h":
			printKernelHelp()
		case "status":
			handleKernelStatus(config, channelManager, registry, multiKernelManager)
		case "connectors", "cs":
			handleKernelConnectors(registry, multiKernelManager)
		case "channels", "ch":
			handleKernelChannels(channelManager)
		case "kernels", "ks":
			handleKernelList(multiKernelManager)
		case "connect-kernel":
			handleConnectKernel(multiKernelManager, args)
		case "disconnect-kernel":
			handleDisconnectKernel(multiKernelManager, args)
		case "exit", "quit", "q":
			fmt.Println("Shutting down kernel...")
			os.Exit(0)
		default:
			fmt.Printf("Unknown command: %s. Type 'help' for available commands\n", command)
		}
	}
}

// printKernelHelp æ‰“å°å†…æ ¸å‘½ä»¤å¸®åŠ©
func printKernelHelp() {
	fmt.Println("Kernel Management Commands:")
	fmt.Println("  status              - Show kernel status and statistics")
	fmt.Println("  connectors, cs      - List all connectors (local + connected kernels)")
	fmt.Println("  channels, ch        - List all channels in this kernel")
	fmt.Println("  kernels, ks         - List all known kernels (multi-kernel mode)")
	fmt.Println("  connect-kernel <kernel_id> <address> <port> - Connect to another kernel")
	fmt.Println("  disconnect-kernel <kernel_id> - Disconnect from a kernel")
	fmt.Println("  help, h             - Show this help message")
	fmt.Println("  exit, quit, q       - Exit the kernel")
	fmt.Println()
}

// handleKernelStatus å¤„ç†çŠ¶æ€æŸ¥è¯¢å‘½ä»¤
func handleKernelStatus(config *Config, channelManager *circulation.ChannelManager,
	registry *control.Registry, multiKernelManager *server.MultiKernelManager) {

	fmt.Println("=== Kernel Status ===")
	fmt.Printf("Kernel ID: %s\n", config.Kernel.ID)
	fmt.Printf("Type: %s\n", config.Kernel.Type)
	fmt.Printf("Address: %s:%d\n", config.Server.Address, config.Server.Port)
	fmt.Println("Multi-kernel: enabled (default)")

	// è¿æ¥å™¨ç»Ÿè®¡
	connectorCount := len(registry.ListConnectors())
	fmt.Printf("Connectors: %d\n", connectorCount)

	// é¢‘é“ç»Ÿè®¡
	channelCount := len(channelManager.ListChannels())
	fmt.Printf("Channels: %d\n", channelCount)

	// å¤šå†…æ ¸ä¿¡æ¯
	kernelCount := multiKernelManager.GetConnectedKernelCount()
	fmt.Printf("Connected Kernels: %d\n", kernelCount)

	fmt.Println()
}

// handleKernelConnectors å¤„ç†è¿æ¥å™¨åˆ—è¡¨å‘½ä»¤
func handleKernelConnectors(registry *control.Registry, multiKernelManager *server.MultiKernelManager) {
	var connectors []*pb.ConnectorInfo
	var err error

	// å¦‚æœæœ‰è¿æ¥çš„å…¶ä»–å†…æ ¸ï¼Œæ”¶é›†æ‰€æœ‰è¿æ¥å™¨çš„ä¿¡æ¯
	if multiKernelManager != nil && multiKernelManager.GetConnectedKernelCount() > 0 {
		connectors, err = multiKernelManager.CollectAllConnectors()
		if err != nil {
			fmt.Printf("Failed to collect connectors: %v\n", err)
			return
		}
	} else {
		// åªæœ‰æœ¬åœ°è¿æ¥å™¨
		localConnectors := registry.ListConnectors()
		for _, conn := range localConnectors {
			connectors = append(connectors, &pb.ConnectorInfo{
				ConnectorId:   conn.ConnectorID,
				EntityType:    conn.EntityType,
				PublicKey:     conn.PublicKey,
				Status:        string(conn.Status),
				LastHeartbeat: conn.LastHeartbeat.Unix(),
				RegisteredAt:  conn.RegisteredAt.Unix(),
				KernelId:      "", // æœ¬åœ°è¿æ¥å™¨
			})
		}
	}

	if len(connectors) == 0 {
		fmt.Println("No connectors registered")
		return
	}

	fmt.Println("=== Registered Connectors ===")
	fmt.Println(strings.Repeat("-", 100))
	fmt.Printf("%-20s %-15s %-10s %-20s %-15s\n", "Connector ID", "Entity Type", "Status", "Last Heartbeat", "Kernel")
	fmt.Println(strings.Repeat("-", 100))

	for _, c := range connectors {
		lastHeartbeat := time.Unix(c.LastHeartbeat, 0)
		timeStr := time.Since(lastHeartbeat).Round(time.Second).String()

		kernelID := c.KernelId
		if kernelID == "" {
			kernelID = "local"
		}

		fmt.Printf("%-20s %-15s %-10s %-20s %-15s\n",
			c.ConnectorId,
			c.EntityType,
			c.Status,
			timeStr+" ago",
			kernelID)
	}
	fmt.Println()
}

// handleKernelChannels å¤„ç†é¢‘é“åˆ—è¡¨å‘½ä»¤
func handleKernelChannels(channelManager *circulation.ChannelManager) {
	channels := channelManager.ListChannels()

	if len(channels) == 0 {
		fmt.Println("No channels created")
		return
	}

	fmt.Println("=== Active Channels ===")
	fmt.Println(strings.Repeat("-", 100))
	fmt.Printf("%-40s %-20s %-15s %-10s\n", "Channel ID", "Data Topic", "Status", "Participants")
	fmt.Println(strings.Repeat("-", 100))

	for _, ch := range channels {
		participantCount := len(ch.SenderIDs) + len(ch.ReceiverIDs)
		fmt.Printf("%-40s %-20s %-15s %-10d\n",
			ch.ChannelID,
			ch.DataTopic,
			ch.Status,
			participantCount)
	}
	fmt.Println()
}

// handleKernelList å¤„ç†å†…æ ¸åˆ—è¡¨å‘½ä»¤
func handleKernelList(multiKernelManager *server.MultiKernelManager) {
	if multiKernelManager == nil {
		fmt.Println("Multi-kernel mode not enabled")
		return
	}

	kernels := multiKernelManager.ListKnownKernels()

	if len(kernels) == 0 {
		fmt.Println("No other kernels known")
		return
	}

	fmt.Println("=== Known Kernels ===")
	fmt.Println(strings.Repeat("-", 80))
	fmt.Printf("%-20s %-20s %-10s %-15s\n", "Kernel ID", "Address", "Status", "Last Heartbeat")
	fmt.Println(strings.Repeat("-", 80))

	for _, k := range kernels {
		lastHeartbeat := time.Unix(k.LastHeartbeat, 0)
		timeStr := time.Since(lastHeartbeat).Round(time.Second).String()
		fmt.Printf("%-20s %-20s %-10s %-15s\n",
			k.KernelID,
			fmt.Sprintf("%s:%d", k.Address, k.Port),
			k.Status,
			timeStr+" ago")
	}
	fmt.Println()
}

// handleConnectKernel å¤„ç†è¿æ¥å†…æ ¸å‘½ä»¤
func handleConnectKernel(multiKernelManager *server.MultiKernelManager, args []string) {
	if multiKernelManager == nil {
		fmt.Println("Multi-kernel mode not enabled")
		return
	}

	if len(args) != 3 {
		fmt.Println("Usage: connect-kernel <kernel_id> <address> <port>")
		return
	}

	kernelID := args[0]
	address := args[1]
	port, err := strconv.Atoi(args[2])
	if err != nil {
		fmt.Printf("Invalid port: %s\n", args[2])
		return
	}

	fmt.Printf("Connecting to kernel %s at %s:%d...\n", kernelID, address, port)

	if err := multiKernelManager.ConnectToKernel(kernelID, address, port); err != nil {
		fmt.Printf("Failed to connect: %v\n", err)
		return
	}

	fmt.Printf("Successfully connected to kernel %s\n", kernelID)
}

// handleDisconnectKernel å¤„ç†æ–­å¼€å†…æ ¸è¿æ¥å‘½ä»¤
func handleDisconnectKernel(multiKernelManager *server.MultiKernelManager, args []string) {
	if multiKernelManager == nil {
		fmt.Println("Multi-kernel mode not enabled")
		return
	}

	if len(args) != 1 {
		fmt.Println("Usage: disconnect-kernel <kernel_id>")
		return
	}

	kernelID := args[0]

	fmt.Printf("Disconnecting from kernel %s...\n", kernelID)

	if err := multiKernelManager.DisconnectFromKernel(kernelID); err != nil {
		fmt.Printf("Failed to disconnect: %v\n", err)
		return
	}

	fmt.Printf("Successfully disconnected from kernel %s\n", kernelID)
}

// handleSyncConnectors å¤„ç†åŒæ­¥è¿æ¥å™¨å‘½ä»¤

func loadConfig(path string) (*Config, error) {
	data, err := os.ReadFile(path)
	if err != nil {
		return nil, fmt.Errorf("failed to read config file: %w", err)
	}

	var config Config
	if err := yaml.Unmarshal(data, &config); err != nil {
		return nil, fmt.Errorf("failed to parse config: %w", err)
	}

	return &config, nil
}

