package server

import (
	"context"
	"fmt"
	"log"
	"strings"
	"gopkg.in/yaml.v3"
	"os"
	"time"

	"github.com/google/uuid"
	pb "github.com/trusted-space/kernel/proto/kernel/v1"
	"github.com/trusted-space/kernel/kernel/circulation"
	"github.com/trusted-space/kernel/kernel/control"
	"github.com/trusted-space/kernel/kernel/evidence"
	"github.com/trusted-space/kernel/kernel/security"
)

const KernelVersion = "v1.0.0"

// IdentityServiceServer å®ç°èº«ä»½ä¸å‡†å…¥æœåŠ¡
type IdentityServiceServer struct {
	pb.UnimplementedIdentityServiceServer
	registry           *control.Registry
	auditLog           *evidence.AuditLog
	ca                 *security.CA
	channelManager     *circulation.ChannelManager
	notificationManager *NotificationManager
	multiKernelManager *MultiKernelManager
}

// NewIdentityServiceServer åˆ›å»ºèº«ä»½æœåŠ¡
func NewIdentityServiceServer(registry *control.Registry, auditLog *evidence.AuditLog, ca *security.CA, channelManager *circulation.ChannelManager, notificationManager *NotificationManager, multiKernelManager *MultiKernelManager) *IdentityServiceServer {
	return &IdentityServiceServer{
		registry:           registry,
		auditLog:           auditLog,
		ca:                 ca,
		channelManager:     channelManager,
		notificationManager: notificationManager,
		multiKernelManager: multiKernelManager,
	}
}

// Handshake å¤„ç†è¿æ¥å™¨æ¡æ‰‹
func (s *IdentityServiceServer) Handshake(ctx context.Context, req *pb.HandshakeRequest) (*pb.HandshakeResponse, error) {
	// ä»è¯ä¹¦ä¸­æå– connector_id
	certID, err := security.ExtractConnectorIDFromContext(ctx)
	if err != nil {
		// è®°å½•è®¤è¯å¤±è´¥
		s.auditLog.SubmitEvidence(
			req.ConnectorId,
			evidence.EventTypeAuthFail,
			"",
			"",
			map[string]string{"error": err.Error()},
		)
		
		return &pb.HandshakeResponse{
			Success: false,
			Message: fmt.Sprintf("authentication failed: %v", err),
		}, nil
	}

	// éªŒè¯è¯·æ±‚ä¸­çš„ connector_id æ˜¯å¦ä¸è¯ä¹¦åŒ¹é…
	if err := security.VerifyConnectorID(ctx, req.ConnectorId); err != nil {
		s.auditLog.SubmitEvidence(
			req.ConnectorId,
			evidence.EventTypeAuthFail,
			"",
			"",
			map[string]string{"error": "connector ID mismatch"},
		)
		
		return &pb.HandshakeResponse{
			Success: false,
			Message: fmt.Sprintf("connector ID mismatch: %v", err),
		}, nil
	}

	// ç”Ÿæˆä¼šè¯ä»¤ç‰Œ
	sessionToken := uuid.New().String()

	// æ³¨å†Œè¿æ¥å™¨
	if err := s.registry.Register(req.ConnectorId, req.EntityType, req.PublicKey, sessionToken); err != nil {
		return &pb.HandshakeResponse{
			Success: false,
			Message: fmt.Sprintf("registration failed: %v", err),
		}, nil
	}

	// è®°å½•è®¤è¯æˆåŠŸ
	s.auditLog.SubmitEvidence(
		req.ConnectorId,
		evidence.EventTypeAuthSuccess,
		"",
		"",
		map[string]string{
			"entity_type": req.EntityType,
			"cert_cn":     certID,
		},
	)

	// æ£€æŸ¥æ˜¯å¦æ˜¯é‡å¯æ¢å¤ï¼Œå¦‚æœæ˜¯åˆ™å‘é€é¢‘é“æ¢å¤é€šçŸ¥
	if s.channelManager.IsConnectorRestarting(req.ConnectorId) {
		log.Printf("ğŸ”„ Connector %s detected as restarting, sending channel recovery notifications", req.ConnectorId)
		s.sendChannelRecoveryNotifications(req.ConnectorId)
	}

	return &pb.HandshakeResponse{
		Success:       true,
		SessionToken:  sessionToken,
		KernelVersion: KernelVersion,
		Message:       "handshake successful",
	}, nil
}

// sendChannelRecoveryNotifications å‘é€é¢‘é“æ¢å¤é€šçŸ¥ç»™é‡å¯çš„è¿æ¥å™¨
func (s *IdentityServiceServer) sendChannelRecoveryNotifications(connectorID string) {
	// è·å–æ‰€æœ‰æ´»è·ƒé¢‘é“
	channels := s.channelManager.GetAllChannels()

	// å¼‚æ­¥å‘é€æ¢å¤é€šçŸ¥ï¼Œå…è®¸è¿æ¥å™¨æœ‰æ—¶é—´å¯åŠ¨é€šçŸ¥ç›‘å¬å™¨
	go func() {
		// ç­‰å¾…è¿æ¥å™¨å¯åŠ¨é€šçŸ¥ç›‘å¬å™¨ï¼ˆæœ€å¤šç­‰å¾…10ç§’ï¼‰
		maxRetries := 20
		for i := 0; i < maxRetries; i++ {
			time.Sleep(500 * time.Millisecond) // æ¯500msæ£€æŸ¥ä¸€æ¬¡

			successCount := 0
			totalCount := 0

			for _, channel := range channels {
				// åªå‘é€è¿æ¥å™¨å‚ä¸çš„é¢‘é“é€šçŸ¥
				if channel.Status == circulation.ChannelStatusActive && channel.IsParticipant(connectorID) {
					totalCount++

					// æ„é€ é¢‘é“é€šçŸ¥ï¼ˆç»Ÿä¸€é¢‘é“ï¼‰

					negotiationStatus := pb.ChannelNegotiationStatus_NEGOTIATION_STATUS_ACCEPTED

					notification := &pb.ChannelNotification{
						ChannelId:         channel.ChannelID,
						CreatorId:         channel.CreatorID,
						SenderIds:         channel.SenderIDs,
						ReceiverIds:       channel.ReceiverIDs,
						// ChannelType:       pb.ChannelType_CHANNEL_TYPE_DATA, // å·²åºŸå¼ƒ
						Encrypted:         channel.Encrypted,
						// RelatedChannelIds: []string{}, // å·²åºŸå¼ƒ
						DataTopic:         channel.DataTopic,
						CreatedAt:         channel.CreatedAt.Unix(),
						NegotiationStatus: negotiationStatus,
					}

					// æ·»åŠ å­˜è¯é…ç½®ï¼ˆå¦‚æœæœ‰ï¼‰
					if channel.EvidenceConfig != nil {
						notification.EvidenceConfig = &pb.EvidenceConfig{
							Mode:           string(channel.EvidenceConfig.Mode),
							Strategy:       string(channel.EvidenceConfig.Strategy),
							ConnectorId:    channel.EvidenceConfig.ConnectorID,
							BackupEnabled:  channel.EvidenceConfig.BackupEnabled,
							RetentionDays:  int32(channel.EvidenceConfig.RetentionDays),
							CompressData:   channel.EvidenceConfig.CompressData,
							CustomSettings: channel.EvidenceConfig.CustomSettings,
						}
					}

					// å‘é€é€šçŸ¥
					if err := s.notificationManager.Notify(connectorID, notification); err != nil {
						log.Printf("âš ï¸ Recovery notification attempt %d for channel %s to %s failed: %v",
							i+1, channel.ChannelID, connectorID, err)
					} else {
						log.Printf("âœ“ Recovery notification sent for channel %s to %s", channel.ChannelID, connectorID)
						successCount++
					}
				}
			}

			// å¦‚æœæ‰€æœ‰é€šçŸ¥éƒ½å‘é€æˆåŠŸï¼Œé€€å‡ºé‡è¯•å¾ªç¯
			if successCount == totalCount && totalCount > 0 {
				log.Printf("âœ… All recovery notifications sent successfully to %s", connectorID)
				return
			}
		}

		log.Printf("âš ï¸ Failed to send recovery notifications to %s after %d attempts", connectorID, maxRetries)
	}()
}

// Heartbeat å¤„ç†å¿ƒè·³è¯·æ±‚
func (s *IdentityServiceServer) Heartbeat(ctx context.Context, req *pb.HeartbeatRequest) (*pb.HeartbeatResponse, error) {
	// éªŒè¯è¿æ¥å™¨ ID
	if err := security.VerifyConnectorID(ctx, req.ConnectorId); err != nil {
		return &pb.HeartbeatResponse{
			Acknowledged: false,
		}, fmt.Errorf("connector ID verification failed: %w", err)
	}

	// æ›´æ–°å¿ƒè·³
	if err := s.registry.UpdateHeartbeat(req.ConnectorId); err != nil {
		return &pb.HeartbeatResponse{
			Acknowledged: false,
		}, fmt.Errorf("heartbeat update failed: %w", err)
	}

	return &pb.HeartbeatResponse{
		Acknowledged:    true,
		ServerTimestamp: time.Now().Unix(),
	}, nil
}

// DiscoverConnectors å‘ç°ç©ºé—´ä¸­çš„å…¶ä»–è¿æ¥å™¨
func (s *IdentityServiceServer) DiscoverConnectors(ctx context.Context, req *pb.DiscoverRequest) (*pb.DiscoverResponse, error) {
	// éªŒè¯è¯·æ±‚è€…èº«ä»½
	// å¯¹äºå†…æ ¸é—´è¯·æ±‚ï¼ŒRequesterIdæ˜¯å†…æ ¸IDï¼Œéœ€è¦ç‰¹æ®Šå¤„ç†
	isKernelRequest := strings.HasPrefix(req.RequesterId, "kernel-")
	if !isKernelRequest {
		// æ™®é€šè¿æ¥å™¨è¯·æ±‚ï¼šéªŒè¯è¿æ¥å™¨ID
		if err := security.VerifyConnectorID(ctx, req.RequesterId); err != nil {
			return &pb.DiscoverResponse{
				TotalCount: 0,
			}, fmt.Errorf("requester authentication failed: %w", err)
		}
		// å¦‚æœå­˜åœ¨å·²è¿æ¥çš„å†…æ ¸ï¼Œæ±‡æ€»æœ¬åœ° + è¿œç«¯è¿æ¥å™¨ä¾›è¿æ¥å™¨æŸ¥çœ‹
		if s.multiKernelManager != nil && s.multiKernelManager.GetConnectedKernelCount() > 0 {
			connectors, err := s.multiKernelManager.CollectAllConnectors()
			if err != nil {
				log.Printf("Failed to collect connectors for Discover: %v", err)
				// å›é€€åˆ°ä»…æœ¬åœ°åˆ—è¡¨ï¼ˆç»§ç»­æ‰§è¡Œåç»­æœ¬åœ°åˆ†æ”¯ï¼‰
			} else {
				// è¿‡æ»¤æ‰è¯·æ±‚è€…è‡ªèº«ï¼ˆæœ¬åœ°æ³¨å†Œçš„åŒåè¿æ¥å™¨ï¼‰
				final := make([]*pb.ConnectorInfo, 0, len(connectors))
				for _, c := range connectors {
					if c.ConnectorId == req.RequesterId && c.KernelId == s.multiKernelManager.config.KernelID {
						continue
					}
					// ç±»å‹è¿‡æ»¤
					if req.FilterType == "" || c.EntityType == req.FilterType {
						final = append(final, c)
					}
				}

				return &pb.DiscoverResponse{
					Connectors: final,
					TotalCount: int32(len(final)),
				}, nil
			}
		}
	} else {
		// å†…æ ¸é—´è¯·æ±‚ï¼šéªŒè¯å†…æ ¸èº«ä»½ï¼ˆTODO: å®ç°å†…æ ¸èº«ä»½éªŒè¯ï¼‰
		// ç›®å‰æš‚æ—¶å…è®¸æ‰€æœ‰å†…æ ¸è¯·æ±‚ï¼Œä½†åº”è¯¥æ·»åŠ æ›´ä¸¥æ ¼çš„éªŒè¯
		log.Printf("Kernel-to-kernel request from %s", req.RequesterId)
	}

	// å¯¹äºå†…æ ¸é—´è¯·æ±‚ï¼Œä»…è¿”å›æœ¬åœ°æ³¨å†Œè¡¨ä¸­çš„è¿æ¥å™¨ï¼ˆé¿å…é€’å½’è°ƒç”¨åˆ°å…¶ä»–å†…æ ¸ï¼‰
	if isKernelRequest {
		allConnectors := s.registry.ListConnectors()
		pbConnectors := make([]*pb.ConnectorInfo, 0, len(allConnectors))
		for _, info := range allConnectors {
			pbConnectors = append(pbConnectors, &pb.ConnectorInfo{
				ConnectorId:   info.ConnectorID,
				EntityType:    info.EntityType,
				PublicKey:     info.PublicKey,
				Status:        string(info.Status),
				LastHeartbeat: info.LastHeartbeat.Unix(),
				RegisteredAt:  info.RegisteredAt.Unix(),
				KernelId:      s.multiKernelManager.config.KernelID,
			})
		}
		// å¯é€‰ç±»å‹è¿‡æ»¤
		if req.FilterType != "" {
			filtered := make([]*pb.ConnectorInfo, 0)
			for _, c := range pbConnectors {
				if c.EntityType == req.FilterType {
					filtered = append(filtered, c)
				}
			}
			pbConnectors = filtered
		}
		return &pb.DiscoverResponse{
			Connectors: pbConnectors,
			TotalCount: int32(len(pbConnectors)),
		}, nil
	}

	// æ™®é€šè¿æ¥å™¨è¯·æ±‚ï¼šè¿”å›æœ¬åœ°æ³¨å†Œè¡¨ä¸­çš„è¿æ¥å™¨
	allConnectors := s.registry.ListConnectors()
	// è¿‡æ»¤æ‰è¯·æ±‚è€…è‡ªå·±
	filtered := make([]*control.ConnectorInfo, 0)
	for _, info := range allConnectors {
		if info.ConnectorID != req.RequesterId {
			// å¦‚æœæŒ‡å®šäº†ç±»å‹è¿‡æ»¤ï¼Œåˆ™è¿›è¡Œè¿‡æ»¤
			if req.FilterType == "" || info.EntityType == req.FilterType {
				filtered = append(filtered, info)
			}
		}
	}

	// è½¬æ¢ä¸ºprotoæ ¼å¼
	pbConnectors := make([]*pb.ConnectorInfo, 0, len(filtered))
	for _, info := range filtered {
		pbConnectors = append(pbConnectors, &pb.ConnectorInfo{
			ConnectorId:     info.ConnectorID,
			EntityType:    info.EntityType,
			PublicKey:     info.PublicKey,
			Status:        string(info.Status), // å°†ConnectorStatusè½¬æ¢ä¸ºstring
			LastHeartbeat: info.LastHeartbeat.Unix(),
			RegisteredAt:  info.RegisteredAt.Unix(),
		})
	}

	return &pb.DiscoverResponse{
		Connectors: pbConnectors,
		TotalCount: int32(len(pbConnectors)),
	}, nil
}

// GetConnectorInfo è·å–è¿æ¥å™¨è¯¦ç»†ä¿¡æ¯
func (s *IdentityServiceServer) GetConnectorInfo(ctx context.Context, req *pb.GetConnectorInfoRequest) (*pb.GetConnectorInfoResponse, error) {
	// éªŒè¯è¯·æ±‚è€…èº«ä»½
	if err := security.VerifyConnectorID(ctx, req.RequesterId); err != nil {
		return &pb.GetConnectorInfoResponse{
			Found:   false,
			Message: fmt.Sprintf("requester authentication failed: %v", err),
		}, nil
	}

	// è·å–è¿æ¥å™¨ä¿¡æ¯
	info, err := s.registry.GetConnector(req.ConnectorId)
	if err != nil {
		return &pb.GetConnectorInfoResponse{
			Found:   false,
			Message: fmt.Sprintf("connector not found: %v", err),
		}, nil
	}

	return &pb.GetConnectorInfoResponse{
		Found: true,
		Connector: &pb.ConnectorInfo{
			ConnectorId:   info.ConnectorID,
			EntityType:    info.EntityType,
			PublicKey:     info.PublicKey,
			Status:        string(info.Status), // å°†ConnectorStatusè½¬æ¢ä¸ºstring
			LastHeartbeat: info.LastHeartbeat.Unix(),
			RegisteredAt:  info.RegisteredAt.Unix(),
		},
		Message: "connector found",
	}, nil
}

// RegisterConnector å¤„ç†è¿æ¥å™¨é¦–æ¬¡æ³¨å†Œå’Œè¯ä¹¦ç”³è¯·
// æ³¨æ„ï¼šæ­¤æ–¹æ³•ä¸éœ€è¦mTLSéªŒè¯ï¼Œå› ä¸ºè¿æ¥å™¨è¿˜æ²¡æœ‰è¯ä¹¦
func (s *IdentityServiceServer) RegisterConnector(ctx context.Context, req *pb.RegisterConnectorRequest) (*pb.RegisterConnectorResponse, error) {
	// éªŒè¯åŸºæœ¬å­—æ®µ
	if req.ConnectorId == "" {
		return &pb.RegisterConnectorResponse{
			Success: false,
			Message: "connector_id is required",
		}, nil
	}

	if req.EntityType == "" {
		return &pb.RegisterConnectorResponse{
			Success: false,
			Message: "entity_type is required",
		}, nil
	}

	// æ£€æŸ¥è¿æ¥å™¨æ˜¯å¦å·²æ³¨å†Œ
	if _, err := s.registry.GetConnector(req.ConnectorId); err == nil {
		return &pb.RegisterConnectorResponse{
			Success: false,
			Message: fmt.Sprintf("connector %s already registered", req.ConnectorId),
		}, nil
	}

	// éªŒè¯é…ç½®YAMLæ ¼å¼ï¼ˆå¦‚æœæä¾›ï¼‰
	if req.ConfigYaml != "" {
		var config map[string]interface{}
		if err := yaml.Unmarshal([]byte(req.ConfigYaml), &config); err != nil {
			return &pb.RegisterConnectorResponse{
				Success: false,
				Message: fmt.Sprintf("invalid config YAML: %v", err),
			}, nil
		}
		// è¿™é‡Œå¯ä»¥æ·»åŠ æ›´è¯¦ç»†çš„é…ç½®éªŒè¯é€»è¾‘
	}

	// ä½¿ç”¨CAç­¾å‘è¯ä¹¦
	certPEM, keyPEM, err := s.ca.IssueConnectorCert(req.ConnectorId, nil, nil)
	if err != nil {
		return &pb.RegisterConnectorResponse{
			Success: false,
			Message: fmt.Sprintf("failed to issue certificate: %v", err),
		}, nil
	}

	// è¯»å–CAè¯ä¹¦
	caCertPEM, err := os.ReadFile(s.ca.CertPath)
	if err != nil {
		return &pb.RegisterConnectorResponse{
			Success: false,
			Message: fmt.Sprintf("failed to read CA certificate: %v", err),
		}, nil
	}

	// è®°å½•æ³¨å†Œäº‹ä»¶
	s.auditLog.SubmitEvidence(
		req.ConnectorId,
		evidence.EventTypeConnectorRegistered,
		"",
		"",
		map[string]string{
			"entity_type": req.EntityType,
			"has_config":  fmt.Sprintf("%v", req.ConfigYaml != ""),
		},
	)

	return &pb.RegisterConnectorResponse{
		Success:       true,
		Message:        "connector registered successfully",
		Certificate:    certPEM,
		PrivateKey:     keyPEM,
		CaCertificate:  caCertPEM,
		ConnectorId:    req.ConnectorId,
	}, nil
}

// SetConnectorStatus è®¾ç½®è¿æ¥å™¨çŠ¶æ€
func (s *IdentityServiceServer) SetConnectorStatus(ctx context.Context, req *pb.SetConnectorStatusRequest) (*pb.SetConnectorStatusResponse, error) {
	// éªŒè¯è¯·æ±‚è€…èº«ä»½
	if err := security.VerifyConnectorID(ctx, req.RequesterId); err != nil {
		return &pb.SetConnectorStatusResponse{
			Success: false,
			Message: fmt.Sprintf("requester authentication failed: %v", err),
		}, nil
	}

	// éªŒè¯è¯·æ±‚è€…æ˜¯å¦æœ‰æƒé™è®¾ç½®è¯¥è¿æ¥å™¨çš„çŠ¶æ€ï¼ˆåªèƒ½è®¾ç½®è‡ªå·±çš„çŠ¶æ€ï¼‰
	if req.RequesterId != req.ConnectorId {
		return &pb.SetConnectorStatusResponse{
			Success: false,
			Message: "connector can only set its own status",
		}, nil
	}

	// éªŒè¯çŠ¶æ€å€¼
	validStatuses := map[string]bool{
		"active":   true,
		"inactive": true,
		"closed":   true,
	}
	if !validStatuses[req.Status] {
		return &pb.SetConnectorStatusResponse{
			Success: false,
			Message: fmt.Sprintf("invalid status: %s, must be one of: active, inactive, closed", req.Status),
		}, nil
	}

	// è·å–å½“å‰çŠ¶æ€
	info, err := s.registry.GetConnector(req.ConnectorId)
	if err != nil {
		return &pb.SetConnectorStatusResponse{
			Success: false,
			Message: fmt.Sprintf("connector not found: %v", err),
		}, nil
	}

	previousStatus := string(info.Status)

	// è®¾ç½®æ–°çŠ¶æ€
	newStatus := control.ConnectorStatus(req.Status)
	if err := s.registry.SetStatus(req.ConnectorId, newStatus); err != nil {
		return &pb.SetConnectorStatusResponse{
			Success: false,
			Message: fmt.Sprintf("failed to set status: %v", err),
		}, nil
	}

	// è®°å½•çŠ¶æ€å˜æ›´
	s.auditLog.SubmitEvidence(
		req.ConnectorId,
		evidence.EventTypeConnectorStatusChanged,
		"",
		"",
		map[string]string{
			"previous_status": previousStatus,
			"new_status":       req.Status,
		},
	)

	return &pb.SetConnectorStatusResponse{
		Success:        true,
		Message:        "status updated successfully",
		PreviousStatus: previousStatus,
		CurrentStatus:   req.Status,
	}, nil
}

